--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -1,18 +1,15 @@
 ﻿{
 	"Serilog": {
-		"Using": [ "Serilog.Sinks.RollingFile" ],
+		"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
 		"MinimumLevel": "Debug",
 		"WriteTo": [
+			{ "Name": "Console" },
 			{
-				"Name": "RollingFile",
-				"Args": {
-					"pathFormat": "$logPath$",
-					"formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog",
-					"retainedFileCountLimit": "3"
-				}
+				"Name": "File",
+				"Args": { "path": "$logPath$" }
 			}
 		],
-		"Enrich": [ "WithMachineName", "WithThreadId", "WithProcessId" ]
+		"Enrich": [ "WithMachineName", "WithThreadId" ],
 	},
 	"ApiSettings": {
 		"DisplayName": "$safeprojectname$",
@@ -43,7 +40,7 @@
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server.
 		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
-	$if$ ($securitymodel$ == OAuth)},
+		$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
 		//				 identity server used to authenticate and authorize OAuth2 tokens used by
@@ -94,5 +91,5 @@
 				]
 			}
 		]
-	$endif$}
+		$endif$}
 }
