--- a/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="COFRS.Common" Version="0.0.1-alpha" />
-    <PackageReference Include="COFRS" Version="1.1.82-alpha" />
+    <PackageReference Include="COFRS" Version="0.0.1-alpha" />
     $if$ ($databaseTechnology$ == SQLServer)<PackageReference Include="COFRS.SqlServer" Version="0.0.1-alpha" />
     $endif$$if$ ($databaseTechnology$ == Postgresql)<PackageReference Include="COFRS.Postgresql" Version="0.0.1-alpha" />
     $endif$$if$ ($databaseTechnology$ == MySQL)<PackageReference Include="COFRS.MySql" Version="0.0.1-alpha" />
@@ -20,8 +20,8 @@
     $endif$$if$ ($framework$ == netcoreapp2.1)<PackageReference Include="Microsoft.AspNetCore.App" />
     $endif$<PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
-    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
