--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -21,7 +22,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>COFRSCoreInstaller</RootNamespace>
     <AssemblyName>COFRSCoreInstaller</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -60,6 +61,8 @@
     <Compile Include="ClassMember.cs" />
     <Compile Include="ControllerWizard.cs" />
     <Compile Include="EntityMember.cs" />
+    <Compile Include="ProfileClassFile.cs" />
+    <Compile Include="ProviderOptions.cs" />
     <Compile Include="UserInputProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +109,12 @@
     <Compile Include="UserInputGeneral.Designer.cs">
       <DependentUpon>UserInputGeneral.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserInputValidation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInputValidation.Designer.cs">
+      <DependentUpon>UserInputValidation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utilities.cs" />
     <Compile Include="ValidationWizard.cs" />
   </ItemGroup>
@@ -124,6 +133,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
+      <Version>3.6.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.205" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -136,6 +148,21 @@
     </PackageReference>
     <PackageReference Include="Npgsql">
       <Version>4.1.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Core">
+      <Version>3.5.21022.801</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.DataSetExtensions">
+      <Version>4.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Diagnostics.Tools">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Linq">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.4</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserInputGeneral.resx">
       <DependentUpon>UserInputGeneral.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserInputValidation.resx">
+      <DependentUpon>UserInputValidation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
