--- a/Source/COFRSCoreProjectTemplate/COFRSCoreProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectTemplate/COFRSCoreProjectTemplate.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="SwaggerExamples\HeartbeatExample.cs" />
+    <None Include="Models\SwaggerExamples\HeartbeatExample.cs" />
     <None Include="Properties\launchSettings.json" />
     <None Include="Repository\IServiceRepository.cs" />
     <None Include="Repository\ServiceRepository.cs" />
@@ -62,7 +62,7 @@
     <None Include="Controllers\HeartbeatController.cs" />
     <None Include="Orchestration\IServiceOrchestrator.cs" />
     <None Include="Orchestration\ServiceOrchestrator.cs" />
-    <None Include="Orchestration\ResourceModels\Heartbeat.cs" />
+    <None Include="Models\ResourceModels\Heartbeat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Startup.cs" />
   </ItemGroup>
