--- a/Source/COFRSCoreProjectTemplate/appSettings.Production.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.Production.json
@@ -11,7 +11,7 @@
 	},
 	"ApiSettings": {
 		//	To Do: Change the following to match the base url for your service in your production environment
-		"RootUrl": "http://$safeprojectname$.production.com",
+		"RootUrl": "http://$safeprojectname$.com",
 		"QueryLimit": 50,
 		"CacheLimit": 10000,
 		"Timeout": "00:00:03",
