--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -1,15 +1,27 @@
 ﻿{
 	"Serilog": {
-		"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+		"Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Async" ],
 		"MinimumLevel": "Debug",
 		"WriteTo": [
 			{ "Name": "Console" },
 			{
-				"Name": "File",
-				"Args": { "path": "$logPath$" }
+				"Name": "Async",
+				"Args": {
+					"configure": [
+						{
+							"Name": "File",
+							"Args": {
+								"path": "%APPDATA%\\$safeprojectname$\\Service.log",
+								"rollingInterval": "Day",
+								"shared": true,
+								"retainedFileCountLimit": 5
+							}
+						}
+					]
+				}
 			}
 		],
-		"Enrich": [ "WithMachineName", "WithThreadId" ],
+		"Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
 	},
 	"ApiSettings": {
 		"DisplayName": "$safeprojectname$",
@@ -39,7 +51,7 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server.
-		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;",
 		$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
@@ -90,6 +102,6 @@
 					}
 				]
 			}
-		]
-		$endif$}
+		],
+"$endif$"}
 }
