--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -12,6 +12,7 @@
 							"Name": "File",
 							"Args": {
 								"path": "%APPDATA%\\$safeprojectname$\\Service.log",
+								"formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
 								"rollingInterval": "Day",
 								"shared": true,
 								"retainedFileCountLimit": 5
@@ -51,8 +52,8 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server.
-		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;",
-		$if$ ($securitymodel$ == OAuth)},
+		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+	$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
 		//				 identity server used to authenticate and authorize OAuth2 tokens used by
@@ -103,5 +104,5 @@
 				]
 			}
 		],
-"$endif$"}
+$endif$}
 }
