--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -63,6 +63,7 @@
     <Compile Include="EntityMember.cs" />
     <Compile Include="ProfileClassFile.cs" />
     <Compile Include="ProviderOptions.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="UserInputProject.cs">
       <SubType>Form</SubType>
     </Compile>
