Fixed for OAuth

--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -61,10 +61,12 @@
 		"Scopes": [
 			{
 				"Name": "scope1",
+				"Description":  "scope1 scope",
 				"Secret": "scope-secret-1"
 			},
 			{
 				"Name": "scope2",
+				"Description":  "scope2 scope",
 				"Secret": "scope-secret-2"
 			}
 		],
@@ -102,6 +104,6 @@
 					}
 				]
 			}
-		],
+		]
 $endif$}
 }
