--- a/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
@@ -11,14 +11,14 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="COFRS.Common" Version="0.0.7-alpha" />
-    <PackageReference Include="COFRS" Version="0.0.21-alpha" />
-    $if$ ($databaseTechnology$ == SQLServer)<PackageReference Include="COFRS.SqlServer" Version="0.0.22-alpha" />
-    $endif$$if$ ($databaseTechnology$ == Postgresql)<PackageReference Include="COFRS.Postgresql" Version="0.0.8-alpha" />
+    <PackageReference Include="COFRS.Common" Version="0.0.8-alpha" />
+    <PackageReference Include="COFRS" Version="0.0.22-alpha" />
+    $if$ ($databaseTechnology$ == SQLServer)<PackageReference Include="COFRS.SqlServer" Version="0.0.23-alpha" />
+    $endif$$if$ ($databaseTechnology$ == Postgresql)<PackageReference Include="COFRS.Postgresql" Version="0.0.9-alpha" />
     <PackageReference Include="Npgsql" Version="5.0.1.1" />
-    $endif$$if$ ($databaseTechnology$ == MySQL)<PackageReference Include="COFRS.MySql" Version="0.0.11-alpha" />
+    $endif$$if$ ($databaseTechnology$ == MySQL)<PackageReference Include="COFRS.MySql" Version="0.0.12-alpha" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
-    $endif$$if$ ($securitymodel$ == OAuth)<PackageReference Include="COFRS.OAuth" Version="0.0.1-alpha" />
+    $endif$$if$ ($securitymodel$ == OAuth)<PackageReference Include="COFRS.OAuth" Version="0.0.3-alpha" />
     $endif$$if$ ($framework$ == netcoreapp2.1)<PackageReference Include="Microsoft.AspNetCore.App" />
     $endif$<PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
@@ -32,7 +32,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
-  </ItemGroup>
+  $if$ ($framework$ == netcoreapp2.1)  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  $endif$$if$ ($framework$ == netcoreapp3.1)  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  $endif$</ItemGroup>
 
   <ItemGroup>
     <Content Include="COFRS.Common.xml">
