--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -11,7 +11,7 @@
 						{
 							"Name": "File",
 							"Args": {
-								"path": "%APPDATA%\\$safeprojectname$\\Service.log",
+								"path": "Logs\\Service.log",
 								"formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
 								"rollingInterval": "Day",
 								"shared": true,
