--- a/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectTemplate/ProjectTemplate.csproj
@@ -11,29 +11,28 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="COFRS.Common" Version="0.0.11-alpha" />
-    <PackageReference Include="COFRS" Version="0.0.38-alpha" />
-    $if$ ($databaseTechnology$ == SQLServer)<PackageReference Include="COFRS.SqlServer" Version="0.0.34-alpha" />
+    <PackageReference Include="COFRS.Common" Version="0.0.14-alpha" />
+    <PackageReference Include="COFRS" Version="0.0.42-alpha" />
+    $if$ ($databaseTechnology$ == SQLServer)<PackageReference Include="COFRS.SqlServer" Version="0.0.37-alpha" />
     $endif$$if$ ($databaseTechnology$ == Postgresql)<PackageReference Include="COFRS.Postgresql" Version="0.0.17-alpha" />
     <PackageReference Include="Npgsql" Version="5.0.3" />
     $endif$$if$ ($databaseTechnology$ == MySQL)<PackageReference Include="COFRS.MySql" Version="0.0.21-alpha" />
     <PackageReference Include="MySql.Data" Version="8.0.23" />
-    $endif$$if$ ($securitymodel$ == OAuth)<PackageReference Include="COFRS.OAuth" Version="0.0.9-alpha" />
-    $endif$$if$ ($framework$ == netcoreapp2.1)<PackageReference Include="Microsoft.AspNetCore.App" />
+    $endif$$if$ ($securitymodel$ == OAuth)<PackageReference Include="COFRS.OAuth" Version="0.0.12-alpha" />
     $endif$<PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="6.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
-  $if$ ($framework$ == netcoreapp2.1)  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  $endif$$if$ ($framework$ == netcoreapp3.1)  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="6.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.0.7" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
+    $if$ ($framework$ == netcoreapp3.1)<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   $endif$</ItemGroup>
 
   <ItemGroup>
