--- a/Source/COFRSCoreFullStackTemplate/COFRSCoreFullStackTemplate.csproj
+++ b/Source/COFRSCoreFullStackTemplate/COFRSCoreFullStackTemplate.csproj
@@ -10,11 +10,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{087C77D4-05E3-43D4-82D3-1CD749E2F018}</ProjectGuid>
+    <ProjectGuid>{564C7BDB-0523-4C30-BD4C-E4D14A933BB6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>COFRSCoreProjectTemplate</RootNamespace>
-    <AssemblyName>COFRSCoreProjectTemplate</AssemblyName>
+    <RootNamespace>COFRSCoreFullStackTemplate</RootNamespace>
+    <AssemblyName>COFRSCoreFullStackTemplate</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -46,52 +46,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.CoreUtility">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Models\SwaggerExamples\HeartbeatExample.cs" />
-    <None Include="Properties\launchSettings.json" />
-    <None Include="Repository\IServiceRepository.cs" />
-    <None Include="Repository\ServiceRepository.cs" />
-    <None Include="Program.cs" />
-    <None Include="App_Start\ServiceConfig.cs" />
-    <None Include="App_Start\SwaggerConfig.cs" />
-    <None Include="Controllers\HeartbeatController.cs" />
-    <None Include="Orchestration\IServiceOrchestrator.cs" />
-    <None Include="Orchestration\ServiceOrchestrator.cs" />
-    <None Include="Models\ResourceModels\Heartbeat.cs" />
-    <None Include="Models\SwaggerExamples\PatchExample.cs" />
+    <Content Include="Validation\Validator.cs" />
+    <Content Include="Models\EntityModels\Emodel.cs" />
+    <Content Include="Models\ResourceModels\Model.cs" />
+    <Content Include="Models\Mapping\Map.cs" />
+    <Content Include="Models\SwaggerExamples\Swagger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="appSettings.Development.json" />
-    <None Include="appSettings.json" />
-    <None Include="appSettings.Local.json" />
-    <None Include="appSettings.Production.json" />
-    <None Include="appSettings.QA.json" />
-    <None Include="appSettings.Staging.json" />
-    <None Include="ProjectTemplate.csproj" />
+    <Content Include="Controllers\Controller.cs" />
+    <None Include="COFRS.ico" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="COFRSCoreProjectTemplate.vstemplate" />
+    <VSTemplate Include="COFRSCoreFullStackTemplate.vstemplate" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="COFRS.Common.xml" />
-    <Content Include="COFRS.ico" />
-    <Content Include="COFRS.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools">
-      <Version>16.8.3038</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
