--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -22,7 +22,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>COFRSCoreInstaller</RootNamespace>
     <AssemblyName>COFRSCoreInstaller</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -60,10 +60,18 @@
     </Compile>
     <Compile Include="ClassMember.cs" />
     <Compile Include="ControllerWizard.cs" />
+    <Compile Include="Emitter.cs" />
     <Compile Include="EntityMember.cs" />
+    <Compile Include="FullStackControllerWizard.cs" />
     <Compile Include="ProfileClassFile.cs" />
     <Compile Include="ProviderOptions.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="UserInputFullStack.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserInputFullStack.Designer.cs">
+      <DependentUpon>UserInputFullStack.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInputProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +198,9 @@
     <EmbeddedResource Include="AddConnection.resx">
       <DependentUpon>AddConnection.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserInputFullStack.resx">
+      <DependentUpon>UserInputFullStack.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserInputProject.resx">
       <DependentUpon>UserInputProject.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,6 +225,13 @@
     <ProjectReference Include="..\COFRSCoreControllerTemplate\COFRSCoreControllerTemplate.csproj">
       <Project>{D7E7E13E-DC23-49AE-9FE2-A71483170879}</Project>
       <Name>COFRSCoreControllerTemplate</Name>
+      <VSIXSubPath>ItemTemplates</VSIXSubPath>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+      <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
+    </ProjectReference>
+    <ProjectReference Include="..\COFRSCoreFullStackTemplate\COFRSCoreFullStackTemplate.csproj">
+      <Project>{564C7BDB-0523-4C30-BD4C-E4D14A933BB6}</Project>
+      <Name>COFRSCoreFullStackTemplate</Name>
       <VSIXSubPath>ItemTemplates</VSIXSubPath>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <IncludeOutputGroupsInVSIX>TemplateProjectOutputGroup%3b</IncludeOutputGroupsInVSIX>
