--- a/Source/COFRSCoreEntityTemplate/COFRSCoreEntityTemplate.csproj
+++ b/Source/COFRSCoreEntityTemplate/COFRSCoreEntityTemplate.csproj
@@ -36,6 +36,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
+    <CopyVsixExtensionLocation>ASP.NET Core\Web\ASP.NET</CopyVsixExtensionLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
