--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Emitter.cs" />
     <Compile Include="EntityMember.cs" />
     <Compile Include="FullStackControllerWizard.cs" />
+    <Compile Include="ElementType.cs" />
     <Compile Include="ProfileClassFile.cs" />
     <Compile Include="ProviderOptions.cs" />
     <Compile Include="StringExtensions.cs" />
@@ -144,21 +145,24 @@
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
       <Version>3.6.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory">
+      <Version>5.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.14.0">
       <Version>14.3.25407</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.3038">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.9.1050">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>8.0.22</Version>
+      <Version>8.0.23</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>9.0.1</Version>
     </PackageReference>
     <PackageReference Include="Npgsql">
-      <Version>5.0.0</Version>
+      <Version>5.0.4</Version>
     </PackageReference>
     <PackageReference Include="System.Core">
       <Version>3.5.21022.801</Version>
