--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -66,6 +66,13 @@
     <Compile Include="FullStackControllerWizard.cs" />
     <Compile Include="ElementType.cs" />
     <Compile Include="ProfileClassFile.cs" />
+    <Compile Include="ProgressDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProgressDialog.Designer.cs">
+      <DependentUpon>ProgressDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProjectFolder.cs" />
     <Compile Include="ProviderOptions.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="UserInputFullStack.cs">
@@ -128,6 +135,8 @@
     </Compile>
     <Compile Include="Utilities.cs" />
     <Compile Include="ValidationWizard.cs" />
+    <Compile Include="WindowClass.cs" />
+    <Compile Include="WinNative.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
@@ -143,6 +152,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EnvDTE80">
+      <Version>16.9.31023.347</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
       <Version>3.6.0</Version>
     </PackageReference>
@@ -157,10 +169,10 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>8.0.23</Version>
+      <Version>8.0.24</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>9.0.1</Version>
+      <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Npgsql">
       <Version>5.0.4</Version>
@@ -180,6 +192,12 @@
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
+    <PackageReference Include="System.Runtime.Caching">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="VSLangProj">
+      <Version>16.9.31023.347</Version>
+    </PackageReference>
     <PackageReference Include="VSSDK.TemplateWizardInterface">
       <Version>12.0.4</Version>
     </PackageReference>
@@ -198,10 +216,17 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="StartupGuide.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AddConnection.resx">
       <DependentUpon>AddConnection.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgressDialog.resx">
+      <DependentUpon>ProgressDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserInputFullStack.resx">
       <DependentUpon>UserInputFullStack.cs</DependentUpon>
