Fix for postgresql

--- a/Source/COFRSCoreProjectTemplate/appSettings.Local.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.Local.json
@@ -18,8 +18,8 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server in your local environment.
-		"DefaultConnection": "Server=developmentdb;Database=master;Trusted_Connection=True;"
-	$if$ ($securitymodel$	== OAuth)},
+		"DefaultConnection": "Server=localdb;Database=master;Trusted_Connection=True;Application Name=$safeprojectname$;"
+	$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
 		//				 identity server used to authenticate and authorize OAuth2 tokens in your local
