--- a/Source/COFRSCoreProjectTemplate/appSettings.Development.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.Development.json
@@ -19,7 +19,7 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server in your development environment.
-		"DefaultConnection": "Server=developmentdb;Database=master;Trusted_Connection=True;"
+		"DefaultConnection": "Server=developmentdb;Database=master;Trusted_Connection=True;Application Name=$safeprojectname$;"
 	$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
