--- a/Source/COFRSCoreProjectTemplate/appSettings.QA.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.QA.json
@@ -19,7 +19,7 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server in your QA environment.
-		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+		"DefaultConnection": "Server=qadb;Database=master;Trusted_Connection=True;Application Name=$safeprojectname$;"
 	$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
