--- a/Source/COFRSCoreProjectTemplate/appSettings.json
+++ b/Source/COFRSCoreProjectTemplate/appSettings.json
@@ -55,7 +55,7 @@
 	"ConnectionStrings": {
 		//	To do: Replace the following with the database connection string suited to your
 		//				 Database server.
-		"DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
+		"DefaultConnection": "Server=productiondb;Database=master;Trusted_Connection=True;Application Name=$safeprojectname$;"
 	$if$ ($securitymodel$ == OAuth)},
 	"OAuth2": {
 		//	To do: Replace the following with the authority url, the url to the OAuth2 compliant
