--- a/Source/COFRSCoreProjectWitihSDKTemplate/Service/ProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectWitihSDKTemplate/Service/ProjectTemplate.csproj
@@ -5,6 +5,10 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DocumentationFile>./$safeprojectname$.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="COFRS.Common" Version="0.0.35-alpha" />
