--- a/Source/COFRSCoreProjectWitihSDKTemplate/Service/ProjectTemplate.csproj
+++ b/Source/COFRSCoreProjectWitihSDKTemplate/Service/ProjectTemplate.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Folder Include="Mapping\"/>
     <Folder Include="Validation\"/>
+    <Folder Include="Examples\"/>
   </ItemGroup>
 
 </Project>
