--- a/Source/COFRSCoreExampleTemplate/COFRSCoreExampleTemplate.csproj
+++ b/Source/COFRSCoreExampleTemplate/COFRSCoreExampleTemplate.csproj
@@ -3,18 +3,17 @@
   <PropertyGroup>
     <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{087C77D4-05E3-43D4-82D3-1CD749E2F018}</ProjectGuid>
+    <ProjectGuid>{7CCD693E-5AA8-4B9E-9F4E-A4696091567F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>COFRSCoreProjectTemplate</RootNamespace>
-    <AssemblyName>COFRSCoreProjectTemplate</AssemblyName>
+    <RootNamespace>COFRSCoreExampleTemplate</RootNamespace>
+    <AssemblyName>COFRSCoreExampleTemplate</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
@@ -46,55 +45,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.CoreUtility">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\launchSettings.json" />
-    <None Include="Repository\IServiceRepository.cs" />
-    <None Include="Repository\ServiceRepository.cs" />
-    <None Include="Program.cs" />
-    <None Include="App_Start\ServicesConfig.cs" />
-    <None Include="App_Start\SwaggerConfig.cs" />
-    <None Include="Controllers\HealthCheckController.cs" />
-    <None Include="Orchestration\IServiceOrchestrator.cs" />
-    <None Include="Orchestration\ServiceOrchestrator.cs" />
-    <None Include="Models\ResourceModels\HealthCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <None Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="appSettings.Development.json" />
-    <None Include="appSettings.json" />
-    <None Include="appSettings.Local.json" />
-    <None Include="appSettings.Production.json" />
-    <None Include="appSettings.QA.json" />
-    <None Include="appSettings.Staging.json" />
-    <None Include="ProjectTemplate.csproj" />
+    <None Include="Example.cs" />
   </ItemGroup>
   <ItemGroup>
-    <VSTemplate Include="COFRSCoreProjectTemplate.vstemplate" />
+    <VSTemplate Include="COFRSCoreExampleTemplate.vstemplate">
+    <OutputSubPath>ASP.NET%2520Core\\Web\\ASP.NET</OutputSubPath>
+    </VSTemplate>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="COFRS.Common.xml" />
     <Content Include="COFRS.ico" />
-    <Content Include="COFRS.xml" />
-    <Content Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools">
-      <Version>16.9.1050</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Examples\" />
-    <Folder Include="Mapping\" />
-    <Folder Include="Models\EntityModels\" />
-    <Folder Include="Validation\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
