--- a/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
+++ b/Source/COFRSCoreInstaller/COFRSCoreInstaller.csproj
@@ -152,10 +152,10 @@
     <Compile Include="Emitter.cs" />
     <Compile Include="ProviderOptions.cs" />
     <Compile Include="COFRSServiceProjectWizard.cs" />
-    <Compile Include="UserInputProject.cs">
+    <Compile Include="Common\Forms\UserInputProject.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UserInputProject.Designer.cs">
+    <Compile Include="Common\Forms\UserInputProject.Designer.cs">
       <DependentUpon>UserInputProject.cs</DependentUpon>
     </Compile>
     <Compile Include="CoreProjectWizard.cs" />
@@ -184,18 +184,21 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EnvDTE80">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.31902.203</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
       <Version>3.6.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory">
-      <Version>5.0.0</Version>
+      <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.SDK">
+      <Version>17.0.31902.203</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Validation">
       <Version>17.0.34</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.11.35">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.0.5232">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -206,7 +209,7 @@
       <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="Npgsql">
-      <Version>5.0.10</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Core">
       <Version>3.5.21022.801</Version>
@@ -224,10 +227,10 @@
       <Version>4.3.4</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Caching">
-      <Version>5.0.0</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="VSLangProj">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.31902.203</Version>
     </PackageReference>
     <PackageReference Include="VSSDK.TemplateWizardInterface">
       <Version>12.0.4</Version>
@@ -283,7 +286,7 @@
     <EmbeddedResource Include="Common\Forms\MapEditor.resx">
       <DependentUpon>MapEditor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UserInputProject.resx">
+    <EmbeddedResource Include="Common\Forms\UserInputProject.resx">
       <DependentUpon>UserInputProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
