--- a/Source/COFRSCoreCommandsPackage/COFRSCoreCommandsPackage.csproj
+++ b/Source/COFRSCoreCommandsPackage/COFRSCoreCommandsPackage.csproj
@@ -4,6 +4,7 @@
     <MinimumVisualStudioVersion>16.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <UseCodebase>true</UseCodebase>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -22,7 +23,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>COFRSCoreCommandsPackage</RootNamespace>
     <AssemblyName>COFRSCoreCommandsPackage</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>true</IncludeDebugSymbolsInVSIXContainer>
@@ -71,27 +72,8 @@
     <Compile Include="Forms\Mapper.Designer.cs">
       <DependentUpon>Mapper.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\DBAuthentication.cs" />
-    <Compile Include="Models\DBColumn.cs" />
-    <Compile Include="Models\DBServer.cs" />
-    <Compile Include="Models\DBServerType.cs" />
-    <Compile Include="Models\ElementType.cs" />
-    <Compile Include="Models\EntityMap.cs" />
-    <Compile Include="Models\EntityModel.cs" />
-    <Compile Include="Models\EntityProfile.cs" />
-    <Compile Include="Models\NameNormalizer.cs" />
-    <Compile Include="Models\ProfileMap.cs" />
-    <Compile Include="Models\ProjectFolder.cs" />
-    <Compile Include="Models\ProjectMapping.cs" />
-    <Compile Include="Models\ResourceMap.cs" />
-    <Compile Include="Models\ResourceModel.cs" />
-    <Compile Include="Models\ResourceProfile.cs" />
-    <Compile Include="Models\ResourceType.cs" />
-    <Compile Include="Models\ServerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SourceConverter.cs" />
-    <Compile Include="Utilities\StandardUtils.cs" />
-    <Compile Include="Utilities\StringExtensions.cs" />
     <Compile Include="VSPackage.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -157,6 +139,15 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\COFRSCoreCommon\COFRSCoreCommon.csproj">
+      <Project>{12185790-2236-4648-A212-F1200F30788B}</Project>
+      <Name>COFRSCoreCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
