--- a/Source/COFRSCoreCommon/packages.config
+++ b/Source/COFRSCoreCommon/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="envdte80" version="17.0.31902.203" targetFramework="net472" />
   <package id="Microsoft.VisualStudio.Interop" version="17.0.31902.203" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="17.0.31902.203" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
